--- a/web_repl/index.html
+++ b/web_repl/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
     <title>Gohan REPL</title>
   </head>
-  <body></body>
+  <body class="p-2"></body>
 </html>
