--- a/web_repl/index.html
+++ b/web_repl/index.html
@@ -6,5 +6,5 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
     <title>Gohan REPL</title>
   </head>
-  <body class="p-2"></body>
+  <body class="p-2 bg-white dark:bg-gray-900 antialiased"></body>
 </html>
