Handle empty bold tags

--- a/web_repl/index.html
+++ b/web_repl/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
+    <link data-trunk rel="copy-dir" href="assets">
+    <script src="/assets/tailwind.js"></script>
     <title>Gohan REPL</title>
   </head>
   <body class="p-2 bg-white dark:bg-gray-900 antialiased"></body>
